adiction of hero picture

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
           Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
         </p>
 
-        <a class="btn-primary" href="">Selecione a sua</a>
+        <a class="btn-primary mb-2" href="">Selecione a sua</a>
+
+        <div class="hero__picture">
+          <img class="hero__image" src="./assets/images/bicicletas/nimbus.jpg" alt="Nimbus bike">
+        </div>
       </div>
     </main>
   </header>
