adding image to hero + responsiveness

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       </div>
     </nav>
 
-    <main class="hero">
-      <div class="container">
-        <h1 class="hero__title c0 font-xll mb-1">Bicicletas feitas sob medida</h1>
+    <section class="hero">
+      <div class="container hero__content">
+        <div class="content__left">
+          <h1 class="hero__title c0 font-xll mb-1">Bicicletas feitas sob medida</h1>
+          <p class="c5 font-m mb-2">
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a class="btn-primary mb-2" href="">Selecione a sua</a>
+        </div>
 
-        <p class="c5 font-m mb-2">
-          Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
-        </p>
-
-        <a class="btn-primary mb-2" href="">Selecione a sua</a>
-
-        <div class="hero__picture">
+        <div class="content__right">
           <img class="hero__image" src="./assets/images/bicicletas/nimbus.jpg" alt="Nimbus bike">
         </div>
       </div>
-    </main>
+    </section>
   </header>
 
 </body>
