adding product catalog session

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
 
-  <header class="header">
+  <header>
 
-    <nav class="bg12">
+    <nav class="bg-12">
       <div class="container navbar flex-row">
         <img class="navbar__logo" width="136" height="32" src="./assets/images/bikcraft.svg" alt="logo">
 
@@ -28,19 +28,65 @@
     <section class="hero">
       <div class="container hero__content">
         <div class="content__left">
-          <h1 class="hero__title c0 font-xll mb-1">Bicicletas feitas sob medida</h1>
-          <p class="c5 font-m mb-2">
+          <h1 class="hero__title c-0 font-xll">Bicicletas feitas sob medida</h1>
+          <p class="c-5 font-m mb-2">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
           <a class="btn-primary mb-2" href="">Selecione a sua</a>
         </div>
 
-        <div class="content__right">
+        <div class="hero__frame">
           <img class="hero__image" src="./assets/images/bicicletas/nimbus.jpg" alt="Nimbus bike">
         </div>
       </div>
     </section>
   </header>
+
+  <main>
+    <section class="section catalog">
+
+      <div class="container">
+
+        <h2 class="catalog__title font-xll mb-3">Escolha a sua</h2>
+
+        <ul class="catalog__list flex-row">
+
+          <li class="catalog__card card">
+            <div class="card__frame mb-1"><img class="card__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus"></div>
+
+            <div class="card__title font-ll flex-row mb-05">
+              <h3>Magic Might</h3>
+            </div>
+
+            <p class="font-m c-8">R$ 2499</p>
+          </li>
+
+          <li class="catalog__card card">
+            <div class="card__frame mb-1"><img class="card__image" src="./assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
+
+            <div class="card__title font-ll flex-row mb-05">
+              <h3>Nimbus</h3>
+            </div>
+
+            <p class="font-m c-8">R$ 2499</p>
+          </li>
+
+          <li class="catalog__card card">
+            <div class="card__frame mb-1"><img class="card__image" src="./assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
+
+            <div class="card__title font-ll flex-row mb-05">
+              <h3>Nebula</h3>
+            </div>
+
+            <p class="font-m c-8">R$ 2499</p>
+          </li>
+
+        </ul>
+
+      </div>
+
+    </section>
+  </main>
 
 </body>
 
