feat: add overview section to homepage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero">
       <div class="container hero__content">
         <div class="content__left">
-          <h1 class="hero__title c-0 font-xll">Bicicletas feitas sob medida</h1>
+          <h1 class="hero__title c-0 font-xll yellow-point">Bicicletas feitas sob medida</h1>
           <p class="c-5 font-m mb-2">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="hero__frame">
-          <img class="hero__image" src="./assets/images/bicicletas/nimbus.jpg" alt="Nimbus bike">
+          <img class="img" src="./assets/images/bicicletas/nimbus.jpg" alt="Nimbus bike">
         </div>
       </div>
     </section>
@@ -47,24 +47,24 @@
 
       <div class="container">
 
-        <h2 class="catalog__title font-xll mb-3">Escolha a sua</h2>
+        <h2 class="catalog__title font-xll mb-3 yellow-point">Escolha a sua</h2>
 
         <ul class="catalog__list flex-row">
 
           <li class="catalog__card card">
-            <div class="card__frame mb-1"><img class="card__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus"></div>
+            <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus"></div>
 
-            <div class="card__title font-ll flex-row mb-05">
-              <h3>Magic Might</h3>
+            <div class="catalogCard__title font-ll flex-row mb-05">
+              <h3>Magic</h3>
             </div>
 
             <p class="font-m c-8">R$ 2499</p>
           </li>
 
           <li class="catalog__card card">
-            <div class="card__frame mb-1"><img class="card__image" src="./assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
+            <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
 
-            <div class="card__title font-ll flex-row mb-05">
+            <div class="catalogCard__title font-ll flex-row mb-05">
               <h3>Nimbus</h3>
             </div>
 
@@ -72,9 +72,9 @@
           </li>
 
           <li class="catalog__card card">
-            <div class="card__frame mb-1"><img class="card__image" src="./assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
+            <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
 
-            <div class="card__title font-ll flex-row mb-05">
+            <div class="catalogCard__title font-ll flex-row mb-05">
               <h3>Nebula</h3>
             </div>
 
@@ -84,6 +84,41 @@
         </ul>
 
       </div>
+
+    </section>
+
+    <section class="section overview bg-12">
+      <div class="container overview__grid">
+
+        <div class="overview__left">
+          <div class="mb-4">
+            <p class="overview__subTitle font-m c-5 mb-2">Tecnologia Avançada</p>
+            <h2 class="overview__title font-xll c-0 mb-2 yellow-point">você escolhe as suas cores e componentes</h2>
+            <p class="overview__text c-5 mb-2 font-m">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+            <a href="" class="overview__link font-l cp-1">Escolha um modelo</a>
+          </div>
+          <div class="overview__boxs">
+            <div class="overview__box">
+              <img src="./assets/images/icones/eletrica.svg" class=" mb-05" alt="icone bike" width="24px" height="24px">
+              <h3 class="overviewBox__title font-m c-0 mb-05">Motor elétrico</h3>
+              <p class="font-s c-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+            </div>
+            <div class="overview__box">
+              <img src="./assets/images/icones/rastreador.svg" class=" mb-05" alt="icone bike" width="24px" height="24px">
+              <h3 class="overviewBox__title font-m c-0 mb-05">Rastreador</h3>
+              <p class="font-s c-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="overview__frame">
+          <img class="img" src="./assets/images/fotos/tecnologia.jpg" alt="ilustração">
+        </div>
+
+      </div>
+
+
 
     </section>
   </main>
