feat: add partners section to homepage

--- a/index.html
+++ b/index.html
@@ -121,6 +121,32 @@
 
 
     </section>
+
+    <section class="section partners">
+      <div class="container">
+
+        <h2 class="font-xll yellow-point mb-3">Nossos parceiros</h2>
+
+        <ul class="partners__list">
+          <li class="partnersList__item item__t--mobile item__l--mobile item__t--desktop item__l--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/caravan.svg" alt="parceiro"></li>
+
+          <li class="partnersList__item item__t--mobile item__r--mobile item__t--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/dogs.svg" alt="parceiro"></li>
+
+          <li class="partnersList__item item__l--mobile item__t--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/flexblog.svg" alt="parceiro"></li>
+
+          <li class="partnersList__item item__r--mobile item__t--desktop item__r--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/handel.svg" alt="parceiro"></li>
+
+          <li class="partnersList__item item__l--mobile item__b--desktop item__l--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/lescone.svg" alt="parceiro"></li>
+
+          <li class="partnersList__item item__r--mobile item__b--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/ranek.svg" alt="parceiro"></li>
+
+          <li class="partnersList__item item__b--mobile item__l--mobile item__b--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/surfbot.svg" alt="parceiro"></li>
+
+          <li class="partnersList__item item__b--mobile item__r--mobile item__b--desktop item__r--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/wildbeast.svg" alt="parceiro"></li>
+        </ul>
+
+      </div>
+    </section>
   </main>
 
 </body>
