feat: add testimony  section to home

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="hero">
       <div class="container hero__content">
-        <div class="content__left">
+        <div>
           <h1 class="hero__title c-0 font-xll yellow-point">Bicicletas feitas sob medida</h1>
           <p class="c-5 font-m mb-2">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
@@ -145,6 +145,21 @@
           <li class="partnersList__item item__b--mobile item__r--mobile item__b--desktop item__r--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/wildbeast.svg" alt="parceiro"></li>
         </ul>
 
+      </div>
+    </section>
+
+    <section class="testimony">
+      <div class="testimony__frame">
+        <img class="img testimony__image" src="./assets/images/fotos/depoimento.jpg" alt="perfil">
+      </div>
+
+      <div class="testimony__right">
+        <blockquote class="font-ll cp-5 mb-2">
+          <p class="testimony__text">
+            Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.
+          </p>
+        </blockquote>
+        <p class="font-m-b cp-4">Ana Júlia</p>
       </div>
     </section>
   </main>
