feat: add insurance section to homepage

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <ul class="catalog__list flex-row">
 
-          <li class="catalog__card card">
+          <li class="catalog__card">
             <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus"></div>
 
             <div class="catalogCard__title font-ll flex-row mb-05">
@@ -61,7 +61,7 @@
             <p class="font-m c-8">R$ 2499</p>
           </li>
 
-          <li class="catalog__card card">
+          <li class="catalog__card">
             <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
 
             <div class="catalogCard__title font-ll flex-row mb-05">
@@ -71,7 +71,7 @@
             <p class="font-m c-8">R$ 2499</p>
           </li>
 
-          <li class="catalog__card card">
+          <li class="catalog__card">
             <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
 
             <div class="catalogCard__title font-ll flex-row mb-05">
@@ -161,6 +161,70 @@
         </blockquote>
         <p class="font-m-b cp-4">Ana Júlia</p>
       </div>
+    </section>
+
+    <section class="section bg-11 insurance">
+      <div class="container">
+        <h2 class="font-xll yellow-point c-0 mb-3">Seguros</h2>
+
+        <div class="insurance__cards">
+          <div class="insurance__card bg-12">
+            <div class="insuranceCard__header flex-row mb-2">
+              <h3 class="insuranceCard__title font-ll c-6">Prata</h3>
+              <div class="flex-column insuranceCard__price">
+                <p class="font-ll c-0">R$199</p>
+                <p class="font-ss c-6">mensal</p>
+              </div>
+            </div>
+            <ul class="insuranceCard__list mb-2">
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Duas trocas por ano</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Assistência técnica</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Suporte 08h às 18h</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Cobertura estadual</p>
+              </li>
+            </ul>
+            <a href="" class="btn-secundary">Inscreva-se</a>
+          </div>
+          <div class="insurance__card bg-12">
+            <div class="insuranceCard__header flex-row mb-2">
+              <h3 class="insuranceCard__title font-ll cp-1">Ouro</h3>
+              <div class="flex-column insuranceCard__price">
+                <p class="font-ll c-0">R$299</p>
+                <p class="font-ss c-6">mensal</p>
+              </div>
+            </div>
+            <ul class="insuranceCard__list mb-2">
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Cinco trocas por ano</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Assistência especial</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Suporte 24h</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Cobertura nacional</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Desconto em parceiros</p>
+              </li>
+              <li class="insuranceCard__item font-m">
+                <p class="c-0">Acesso ao Clube Bikcraft</p>
+              </li>
+            </ul>
+            <a href="" class="btn-primary">Inscreva-se</a>
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
 
