--- a/index.html
+++ b/index.html
@@ -228,6 +228,51 @@
     </section>
   </main>
 
+  <footer class="section bg-12">
+    <div class="container footer">
+      <div class="footer__logo">
+        <img src="./assets/images/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      </div>
+
+      <div class="footer__contact">
+        <div class="mb-2">
+          <h2 class="footer__title font-l c-0 mb-2">Contato</h2>
+          <p class="font-m c-0 mb-1">+55 (98) 98350-7939</p>
+          <p class="font-m c-0">jadson20051965@gmail.com</p>
+        </div>
+
+
+        <div class="footer__social flex-row">
+          <a href="./">
+            <img src="./assets/images/redes/facebook.svg" width="32" height="32" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./assets/images/redes/instagram.svg" width="32" height="32" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./assets/images/redes/youtube.svg" width="32" height="32" alt="Youtube">
+          </a>
+        </div>
+      </div>
+
+
+
+      <div>
+        <h2 class="font-l c-0 footer__title mb-2">Informações</h2>
+
+        <nav>
+          <ul>
+            <li class="font-m  mb-1"><a class="c-5" href="./bicicletas.html">Bicicletas</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./seguros.html">Seguros</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./contato.html">Contato</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <p class="footer__copyright c-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
