feat: add products page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p class="c-5 font-m mb-2">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a class="btn-primary mb-2" href="">Selecione a sua</a>
+          <a class="btn-primary mb-2" href="./products.html">Selecione a sua</a>
         </div>
 
         <div class="hero__frame">
@@ -47,7 +47,7 @@
 
       <div class="container">
 
-        <h2 class="catalog__title font-xll mb-3 yellow-point">Escolha a sua</h2>
+        <h2 class="catalog__title font-xll mb-3 c-11 yellow-point">Escolha a sua</h2>
 
         <ul class="catalog__list flex-row">
 
@@ -55,7 +55,7 @@
             <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus"></div>
 
             <div class="catalogCard__title font-ll flex-row mb-05">
-              <h3>Magic</h3>
+              <h3 class="c-11">Magic</h3>
             </div>
 
             <p class="font-m c-8">R$ 2499</p>
@@ -65,7 +65,7 @@
             <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
 
             <div class="catalogCard__title font-ll flex-row mb-05">
-              <h3>Nimbus</h3>
+              <h3 class="c-11">Nimbus</h3>
             </div>
 
             <p class="font-m c-8">R$ 2499</p>
@@ -75,7 +75,7 @@
             <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
 
             <div class="catalogCard__title font-ll flex-row mb-05">
-              <h3>Nebula</h3>
+              <h3 class="c-11">Nebula</h3>
             </div>
 
             <p class="font-m c-8">R$ 2499</p>
@@ -95,7 +95,7 @@
             <p class="overview__subTitle font-m c-5 mb-2">Tecnologia Avançada</p>
             <h2 class="overview__title font-xll c-0 mb-2 yellow-point">você escolhe as suas cores e componentes</h2>
             <p class="overview__text c-5 mb-2 font-m">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-            <a href="" class="overview__link font-l cp-1">Escolha um modelo</a>
+            <a href="./products.html" class="overview__link font-l cp-1">Escolha um modelo</a>
           </div>
           <div class="overview__boxs">
             <div class="overview__box">
@@ -125,7 +125,7 @@
     <section class="section partners">
       <div class="container">
 
-        <h2 class="font-xll yellow-point mb-3">Nossos parceiros</h2>
+        <h2 class="font-xll c-11 yellow-point mb-3">Nossos parceiros</h2>
 
         <ul class="partners__list">
           <li class="partnersList__item item__t--mobile item__l--mobile item__t--desktop item__l--desktop"><img class="partnersList__img img" src="./assets/images/parceiros/caravan.svg" alt="parceiro"></li>
