product page completion

--- a/products.html
+++ b/products.html
@@ -46,13 +46,13 @@
         <li class="bike">
 
           <div class="bike__frame">
-            <img class="img bike__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus">
+            <img class="img bike__image" src="./assets/images/bicicletas/nimbus.jpg" alt="Bicicleta nimbus">
             <p class="font-m c-0 bike__price">R$ 4999</p>
           </div>
 
           <div>
             <h2 class="font-ll c-11 mb-1 bike__title">Nimbus Stark</h2>
-            <p class="font-s c-8 mb-2">
+            <p class="font-s c-8 mb-2 bike__text">
               A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
             </p>
 
@@ -65,6 +65,84 @@
                 <li class="bikeInfo__item flex-row">
                   <img src="./assets/images/icones/carbono.svg" alt="icone">
                   <p class="">50 Km/h</p>
+                </li>
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/velocidade.svg" alt="icone">
+                  <p class="">Fibra de carbono</p>
+                </li>
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/rastreador.svg" alt="icone">
+                  <p class="">Rastreador</p>
+                </li>
+              </ul>
+
+              <a href="" class="btn-primary bike__button">Mais sobre</a>
+            </div>
+
+          </div>
+        </li>
+
+        <li class="bike">
+
+          <div class="bike__frame">
+            <img class="img bike__image" src="./assets/images/bicicletas/magic.jpg" alt="Bicicleta nimbus">
+            <p class="font-m c-0 bike__price">R$ 2499</p>
+          </div>
+
+          <div>
+            <h2 class="font-ll c-11 mb-1 bike__title">Magic Might</h2>
+            <p class="font-s c-8 mb-2 bike__text">
+              A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
+            </p>
+
+            <div class="bike__content">
+              <ul class="bikeInfo__list font-s c-8">
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/eletrica.svg" alt="icone">
+                  <p class="">Motor elétrico</p>
+                </li>
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/carbono.svg" alt="icone">
+                  <p class="">45 Km/h</p>
+                </li>
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/velocidade.svg" alt="icone">
+                  <p class="">Fibra de carbono</p>
+                </li>
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/rastreador.svg" alt="icone">
+                  <p class="">Rastreador</p>
+                </li>
+              </ul>
+
+              <a href="" class="btn-primary bike__button">Mais sobre</a>
+            </div>
+
+          </div>
+        </li>
+
+        <li class="bike">
+
+          <div class="bike__frame">
+            <img class="img bike__image" src="./assets/images/bicicletas/nebula.jpg" alt="Bicicleta nimbus">
+            <p class="font-m c-0 bike__price">R$ 3999</p>
+          </div>
+
+          <div>
+            <h2 class="font-ll c-11 mb-1 bike__title">Nebula Cosmic</h2>
+            <p class="font-s c-8 mb-2 bike__text">
+              A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
+            </p>
+
+            <div class="bike__content">
+              <ul class="bikeInfo__list font-s c-8">
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/eletrica.svg" alt="icone">
+                  <p class="">Motor elétrico</p>
+                </li>
+                <li class="bikeInfo__item flex-row">
+                  <img src="./assets/images/icones/carbono.svg" alt="icone">
+                  <p class="">60 Km/h</p>
                 </li>
                 <li class="bikeInfo__item flex-row">
                   <img src="./assets/images/icones/velocidade.svg" alt="icone">
