preparation of bicycle sales pages

--- a/index.html
+++ b/index.html
@@ -52,33 +52,45 @@
         <ul class="catalog__list flex-row">
 
           <li class="catalog__card">
-            <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus"></div>
+            <a href="./bike/magic.html">
+              <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/magic-home.jpg" alt="Bicicleta nimbus"></div>
 
-            <div class="catalogCard__title font-ll flex-row mb-05">
-              <h3 class="c-11">Magic</h3>
-            </div>
+              <div class="catalogCard__title font-ll flex-row mb-05">
 
-            <p class="font-m c-8">R$ 2499</p>
+                <h3 class="c-11">Magic</h3>
+
+              </div>
+
+              <p class="font-m c-8">R$ 2499</p>
+            </a>
           </li>
 
           <li class="catalog__card">
-            <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
+            <a href="./bike/nimbus.html">
+              <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
 
-            <div class="catalogCard__title font-ll flex-row mb-05">
-              <h3 class="c-11">Nimbus</h3>
-            </div>
+              <div class="catalogCard__title font-ll flex-row mb-05">
 
-            <p class="font-m c-8">R$ 2499</p>
+                <h3 class="c-11">Nimbus</h3>
+
+              </div>
+
+              <p class="font-m c-8">R$ 2499</p>
+            </a>
           </li>
 
           <li class="catalog__card">
-            <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
+            <a href="./bike/nebula.html">
+              <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="./assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
 
-            <div class="catalogCard__title font-ll flex-row mb-05">
-              <h3 class="c-11">Nebula</h3>
-            </div>
+              <div class="catalogCard__title font-ll flex-row mb-05">
 
-            <p class="font-m c-8">R$ 2499</p>
+                <h3 class="c-11">Nebula</h3>
+
+              </div>
+
+              <p class="font-m c-8">R$ 2499</p>
+            </a>
           </li>
 
         </ul>
