--- a/products.html
+++ b/products.html
@@ -76,7 +76,7 @@
                 </li>
               </ul>
 
-              <a href="" class="btn-primary bike__button">Mais sobre</a>
+              <a href="./bike/nimbus.html" class="btn-primary bike__button">Mais sobre</a>
             </div>
 
           </div>
@@ -115,7 +115,7 @@
                 </li>
               </ul>
 
-              <a href="" class="btn-primary bike__button">Mais sobre</a>
+              <a href="./bike/magic.html" class="btn-primary bike__button">Mais sobre</a>
             </div>
 
           </div>
@@ -154,7 +154,7 @@
                 </li>
               </ul>
 
-              <a href="" class="btn-primary bike__button">Mais sobre</a>
+              <a href="./bike/nebula.html" class="btn-primary bike__button">Mais sobre</a>
             </div>
 
           </div>
