html restructuring, page bike

--- a/bike/magic.html
+++ b/bike/magic.html
@@ -41,69 +41,70 @@
             </div>
           </div>
         </div>
-
-        <div>
-          <h2>Informações</h2>
-
-
-          <ul class="font-s c-8 bg-12">
-            <li class="flex-row">
-              <img src="../assets/images/icones/eletrica.svg" alt="icone">
-              <p class="">Motor elétrico</p>
-            </li>
-            <li class="flex-row">
-              <img src="../assets/images/icones/carbono.svg" alt="icone">
-              <p class="">60 Km/h</p>
-            </li>
-            <li class="flex-row">
-              <img src="../assets/images/icones/velocidade.svg" alt="icone">
-              <p class="">Fibra de carbono</p>
-            </li>
-            <li class="flex-row">
-              <img src="../assets/images/icones/rastreador.svg" alt="icone">
-              <p class="">Rastreador</p>
-            </li>
-          </ul>
-        </div>
-
-        <div>
-          <h2>Ficha técnica</h2>
-
-          <ul class="bikeInfo__list font-s c-8 bg-12">
-            <li class="flex-row">
-              <p class="">Peso</p>
-              <p class="">9 Kg</p>
-            </li>
-            <li class="flex-row">
-              <p class="">Altura</p>
-              <p class="">60 cm</p>
-            </li>
-            <li class="flex-row">
-              <p class="">Largura</p>
-              <p class="">120 cm</p>
-            </li>
-            <li class="flex-row">
-              <p class="">Profundidade</p>
-              <p class="">10 cm</p>
-            </li>
-            <li class="flex-row">
-              <p class="">Marchas</p>
-              <p class="">16</p>
-            </li>
-            <li class="flex-row">
-              <p class="">Roda</p>
-              <p class="">29</p>
-            </li>
-          </ul>
-        </div>
-
-        <div><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
-
       </div>
     </section>
   </header>
 
   <main>
+
+    <section>
+
+      <div>
+        <h2>Informações</h2>
+        <ul class="font-s c-8 bg-12">
+          <li class="flex-row">
+            <img src="../assets/images/icones/eletrica.svg" alt="icone">
+            <p class="">Motor elétrico</p>
+          </li>
+          <li class="flex-row">
+            <img src="../assets/images/icones/carbono.svg" alt="icone">
+            <p class="">60 Km/h</p>
+          </li>
+          <li class="flex-row">
+            <img src="../assets/images/icones/velocidade.svg" alt="icone">
+            <p class="">Fibra de carbono</p>
+          </li>
+          <li class="flex-row">
+            <img src="../assets/images/icones/rastreador.svg" alt="icone">
+            <p class="">Rastreador</p>
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <h2>Ficha técnica</h2>
+
+        <ul class="bikeInfo__list font-s c-8 bg-12">
+          <li class="flex-row">
+            <p class="">Peso</p>
+            <p class="">9 Kg</p>
+          </li>
+          <li class="flex-row">
+            <p class="">Altura</p>
+            <p class="">60 cm</p>
+          </li>
+          <li class="flex-row">
+            <p class="">Largura</p>
+            <p class="">120 cm</p>
+          </li>
+          <li class="flex-row">
+            <p class="">Profundidade</p>
+            <p class="">10 cm</p>
+          </li>
+          <li class="flex-row">
+            <p class="">Marchas</p>
+            <p class="">16</p>
+          </li>
+          <li class="flex-row">
+            <p class="">Roda</p>
+            <p class="">29</p>
+          </li>
+        </ul>
+      </div>
+
+      <div><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
+    </section>
+
 
   </main>
 
